force-app/main/default/objects/Operating_Company__mdt/Operating_Company__mdt.object-meta.xml
<CustomObject>
    <label>Operating Company</label>
    <pluralLabel>Operating Company</pluralLabel>
</CustomObject>