force-app/main/default/objects/Operating_Company__mdt/fields/defaultCloseDate__c.field-meta.xml
<CustomField>
    <fullName>defaultCloseDate__c</fullName>
    <label>Default Close Date</label>
    <type>Date</type>
</CustomField>