force-app/main/default/objects/Operating_Company__mdt/fields/defaultLeadConvertedOppRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>defaultLeadConvertedOppRecordTypeId__c</fullName>
    <description>Default Record Type Id of the Operating Company for an Opportunity when the Lead is converted</description>
    <inlineHelpText>Default Record Type Id of the Operating Company for an Opportunity when the Lead is converted</inlineHelpText>
    <label>defaultLeadConvertedOppRecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>