force-app/main/default/objects/Operating_Company__mdt/fields/defaultOpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>defaultOpportunityStage__c</fullName>
    <label>Default Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>