force-app/main/default/objects/Operating_Company__mdt/listViews/All_View_OpCo.listView-meta.xml
<ListView>
    <fullName>All_View_OpCo</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>defaultLeadConvertedOppRecordTypeId__c</columns>
    <columns>defaultOpportunityStage__c</columns>
    <columns>defaultCloseDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
    <language>en_US</language>
</ListView>